--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
     <head>
         <meta charset="utf-8">
         <title>A Template</title>
+        <link rel="stylesheet" href="thinkful-trello.0.0.1.css.map" media="screen" charset="utf-8">
+        <style>
+    .person {
+        width: 200px;
+        text-align: center;
+        border: 1px solid black;
+        padding: 10px;
+        margin: 10px;
+        display: inline-block;
+    }
+
+    .person-name {
+        font-weight: bold;
+    }
+
+    .person-img {
+        display: block;
+        max-width: 128px;
+        max-height: 128px;
+        margin: 10px auto;
+    }
+
+    .highlight {
+        background-color: yellow;
+    }
+</style>
+<div id="app"></div>
     </head>
     <body>
 
     </body>
+    <script type="text/javascript" src="thinkful-trello.0.0.1.js"></script>
 </html>
