Adds ability to blow up images on click

--- a/index.html
+++ b/index.html
@@ -18,15 +18,22 @@
         font-weight: bold;
     }
 
+    .growIMG {
+      /*max-width: 200px;*/
+      transform: scale(2.0);
+    }
+
     .person-img {
         display: block;
         max-width: 128px;
         max-height: 128px;
         margin: 10px auto;
+        transition: all .2s ease-in-out;
     }
 
     .highlight {
-        background-color: yellow;
+        background-color: salmon;
+        font-size: 3em;
     }
 </style>
 <div id="app"></div>
