Adds transition for font size

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     }
 
     .growIMG {
-      /*max-width: 200px;*/
-      transform: scale(2.0);
+      transform: scale(3.5);
     }
 
     .person-img {
@@ -28,12 +27,13 @@
         max-width: 128px;
         max-height: 128px;
         margin: 10px auto;
-        transition: all .2s ease-in-out;
+        transition: all 3s ease-in-out;
     }
 
     .highlight {
         background-color: salmon;
         font-size: 3em;
+        -webkit-transition: all 3s ease;
     }
 </style>
 <div id="app"></div>
