--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>A Template</title>
-    <link rel="stylesheet" href="thinkful-trello.0.0.1.css.map" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="thinkful-trello.0.0.1.css" media="screen" charset="utf-8">
     <style>
         .person {
             width: 200px;
