--- a/index.html
+++ b/index.html
@@ -3,40 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>A Template</title>
+    <title>Knuth-Booth</title>
     <link rel="stylesheet" href="thinkful-trello.0.0.1.css" media="screen" charset="utf-8">
-    <style>
-        .person {
-            width: 200px;
-            text-align: center;
-            border: 1px solid black;
-            padding: 10px;
-            margin: 10px;
-            display: inline-block;
-        }
 
-        .person-name {
-            font-weight: bold;
-        }
-
-        .growIMG {
-            transform: scale(3.5);
-        }
-
-        .person-img {
-            display: block;
-            max-width: 128px;
-            max-height: 128px;
-            margin: 10px auto;
-            transition: all 3s ease-in-out;
-        }
-
-        .highlight {
-            background-color: salmon;
-            font-size: 3em;
-            -webkit-transition: all 3s ease;
-        }
-    </style>
     <div id="app"></div>
 </head>
 
