--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Knuth-Booth</title>
+    <title>Knüth-Büth</title>
     <link rel="stylesheet" href="thinkful-trello.0.0.1.css" media="screen" charset="utf-8">
 
     <div id="app"></div>
